--- a/RainOrShine/WeatherView.xib
+++ b/RainOrShine/WeatherView.xib
@@ -11,44 +11,46 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="WeatherView" customModule="RainOrShine" customModuleProvider="target">
             <connections>
-                <outlet property="temperatureLabel" destination="uIK-ke-L2Y" id="324-JR-2RV"/>
-                <outlet property="view" destination="iN0-l3-epB" id="Uhc-yh-vSc"/>
+                <outlet property="temperatureLabel" destination="c60-pf-SdH" id="WrP-c7-M7n"/>
+                <outlet property="view" destination="QDU-yx-Ne7" id="3Nu-Ko-UTJ"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <visualEffectView opaque="NO" contentMode="scaleToFill" id="nw4-vT-ifU">
             <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
-            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="103" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uIK-ke-L2Y" customClass="WeatherViewTemperatureLabel" customModule="RainOrShine" customModuleProvider="target">
-                    <rect key="frame" x="58.5" y="20" width="83.5" height="60"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="60" id="gUi-vW-9Kx"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Partly Cloudy" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FP3-To-Pib">
-                    <rect key="frame" x="43" y="159" width="114" height="21"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="21" id="o2l-yF-OAW"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                    <nil key="textColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-            </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-            <constraints>
-                <constraint firstAttribute="bottom" secondItem="FP3-To-Pib" secondAttribute="bottom" constant="20" id="5Wj-7n-7BH"/>
-                <constraint firstItem="FP3-To-Pib" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="GRX-bE-uas"/>
-                <constraint firstItem="uIK-ke-L2Y" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="Spd-VQ-kzP"/>
-                <constraint firstItem="uIK-ke-L2Y" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="e9c-4Q-Joj"/>
-            </constraints>
-            <nil key="simulatedStatusBarMetrics"/>
-            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-104" y="-230"/>
-        </view>
+            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="QDU-yx-Ne7">
+                <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
+                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                <subviews>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="103" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c60-pf-SdH" customClass="WeatherViewTemperatureLabel" customModule="RainOrShine" customModuleProvider="target">
+                        <rect key="frame" x="58" y="8" width="84" height="60"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="60" id="TPv-0L-aSK"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Partly Cloudy" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qsK-Fj-OsB">
+                        <rect key="frame" x="43" y="171" width="114" height="21"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="21" id="O9e-7V-sPQ"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="qsK-Fj-OsB" secondAttribute="bottom" constant="8" id="691-QC-YIt"/>
+                    <constraint firstItem="c60-pf-SdH" firstAttribute="top" secondItem="QDU-yx-Ne7" secondAttribute="top" constant="8" id="Ax8-lY-p3W"/>
+                    <constraint firstItem="qsK-Fj-OsB" firstAttribute="centerX" secondItem="QDU-yx-Ne7" secondAttribute="centerX" id="Mva-am-8gE"/>
+                    <constraint firstItem="c60-pf-SdH" firstAttribute="centerX" secondItem="QDU-yx-Ne7" secondAttribute="centerX" id="h4i-CU-ca5"/>
+                </constraints>
+            </view>
+            <blurEffect style="light"/>
+            <point key="canvasLocation" x="-84" y="16"/>
+        </visualEffectView>
     </objects>
 </document>
