--- a/RainOrShine/WeatherView.xib
+++ b/RainOrShine/WeatherView.xib
@@ -29,7 +29,7 @@
                             <constraint firstAttribute="height" constant="60" id="TPv-0L-aSK"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Partly Cloudy" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qsK-Fj-OsB">
@@ -38,7 +38,7 @@
                             <constraint firstAttribute="height" constant="21" id="O9e-7V-sPQ"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="19"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
@@ -49,7 +49,9 @@
                     <constraint firstItem="c60-pf-SdH" firstAttribute="centerX" secondItem="QDU-yx-Ne7" secondAttribute="centerX" id="h4i-CU-ca5"/>
                 </constraints>
             </view>
-            <blurEffect style="light"/>
+            <vibrancyEffect>
+                <blurEffect style="extraLight"/>
+            </vibrancyEffect>
             <point key="canvasLocation" x="-84" y="16"/>
         </visualEffectView>
     </objects>
