--- a/RainOrShine/WeatherView.xib
+++ b/RainOrShine/WeatherView.xib
@@ -24,7 +24,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="136" height="136"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="103" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c60-pf-SdH" customClass="WeatherViewTemperatureLabel" customModule="RainOrShine" customModuleProvider="target">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="103" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c60-pf-SdH">
                         <rect key="frame" x="26" y="8" width="84" height="60"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="60" id="TPv-0L-aSK"/>
