--- a/RainOrShine/LocationView.xib
+++ b/RainOrShine/LocationView.xib
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -17,32 +18,40 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <visualEffectView opaque="NO" contentMode="scaleToFill" id="Soh-r9-Za7">
-            <rect key="frame" x="0.0" y="0.0" width="136" height="68"/>
+            <rect key="frame" x="0.0" y="0.0" width="136" height="102"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="FPF-hb-eXH">
-                <rect key="frame" x="0.0" y="0.0" width="136" height="68"/>
+                <rect key="frame" x="0.0" y="0.0" width="136" height="102"/>
                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pY0-gc-774">
-                        <rect key="frame" x="8" y="8" width="120" height="52"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="52" id="U1A-7l-yjY"/>
-                            <constraint firstAttribute="width" constant="120" id="jF8-3X-tWR"/>
-                        </constraints>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label f dsg" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pY0-gc-774">
+                        <rect key="frame" x="8" y="8" width="120" height="63"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
+                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="PoweredByGoogle" translatesAutoresizingMaskIntoConstraints="NO" id="f7z-OX-Qnj">
+                        <rect key="frame" x="8" y="79" width="120" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="15" id="htE-hM-mwi"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="pY0-gc-774" firstAttribute="centerX" secondItem="FPF-hb-eXH" secondAttribute="centerX" id="DFu-KE-LEK"/>
-                    <constraint firstItem="pY0-gc-774" firstAttribute="centerY" secondItem="FPF-hb-eXH" secondAttribute="centerY" id="Owx-ID-ajt"/>
+                    <constraint firstItem="pY0-gc-774" firstAttribute="top" secondItem="FPF-hb-eXH" secondAttribute="topMargin" id="0gk-1j-cIs"/>
+                    <constraint firstItem="f7z-OX-Qnj" firstAttribute="bottom" secondItem="FPF-hb-eXH" secondAttribute="bottomMargin" id="6fi-Zs-uJz"/>
+                    <constraint firstItem="pY0-gc-774" firstAttribute="trailing" secondItem="f7z-OX-Qnj" secondAttribute="trailing" id="9ox-A9-QAS"/>
+                    <constraint firstItem="pY0-gc-774" firstAttribute="trailing" secondItem="FPF-hb-eXH" secondAttribute="trailingMargin" id="KzO-Cl-1bM"/>
+                    <constraint firstItem="pY0-gc-774" firstAttribute="leading" secondItem="f7z-OX-Qnj" secondAttribute="leading" id="cPu-cl-KGs"/>
+                    <constraint firstItem="f7z-OX-Qnj" firstAttribute="top" secondItem="pY0-gc-774" secondAttribute="bottom" constant="8" symbolic="YES" id="hc8-cu-QhI"/>
+                    <constraint firstItem="pY0-gc-774" firstAttribute="leading" secondItem="FPF-hb-eXH" secondAttribute="leadingMargin" id="jyC-GB-aea"/>
                 </constraints>
             </view>
-            <vibrancyEffect>
-                <blurEffect style="extraLight"/>
-            </vibrancyEffect>
+            <blurEffect style="light"/>
             <point key="canvasLocation" x="-88" y="37"/>
         </visualEffectView>
     </objects>
+    <resources>
+        <image name="PoweredByGoogle" width="144" height="18"/>
+    </resources>
 </document>
